# quill-radio

./: .gitignore  CHANGELOG.md  README.md  launcher.py  pr.html  pr.md  pyproject.toml  quill-radio.spec  run-quill-radio.bat
docs/: planning.epub  planning.html  planning.md  prd.epub  prd.html  prd.md  release-notes-1.0.epub  release-notes-1.0.html  release-notes-1.0.md  release-notes-2.0.epub  release-notes-2.0.html  release-notes-2.0.md  userguide.epub  userguide.html  userguide.md  weather-guide.html  weather-guide.md
installer/: quill-radio.iss
quill_radio/: __init__.py  __main__.py
scripts/: build_exe.ps1  build_installer.ps1  build_release.ps1  render_docs.ps1
